--- a/Serendipity/Base.lproj/Main.storyboard
+++ b/Serendipity/Base.lproj/Main.storyboard
@@ -59,9 +59,9 @@
                                 <segue destination="Vhy-hq-gwn" kind="show" identifier="GameToSettings" id="OcB-VR-4RX"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Connections" id="uJ0-8m-Eyy">
+                        <barButtonItem key="rightBarButtonItem" title="Dock" id="uJ0-8m-Eyy">
                             <connections>
-                                <segue destination="YUi-xK-iJg" kind="show" identifier="GameToConnections" id="wBe-eH-fNO"/>
+                                <segue destination="YUi-xK-iJg" kind="show" identifier="GameToDock" id="wBe-eH-fNO"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -72,11 +72,11 @@
             </objects>
             <point key="canvasLocation" x="676" y="872"/>
         </scene>
-        <!--Connections-->
+        <!--Dock-->
         <scene sceneID="mW7-zq-TQ3">
             <objects>
-                <viewController storyboardIdentifier="Connections" id="YUi-xK-iJg" customClass="ConnectionsViewController" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Connections" id="n18-f6-V7D">
+                <viewController storyboardIdentifier="Connections" id="YUi-xK-iJg" customClass="DockViewController" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" title="Dock" id="n18-f6-V7D">
                         <barButtonItem key="backBarButtonItem" title=" " id="cW2-Pa-cVe"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
