--- a/Serendipity/User Interface/Dock/DockView.xib
+++ b/Serendipity/User Interface/Dock/DockView.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ConnectionsViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DockViewController">
             <connections>
                 <outlet property="tableView" destination="xgv-Wh-zcG" id="VoP-6B-WCY"/>
                 <outlet property="view" destination="iN0-l3-epB" id="K7O-w9-zO2"/>
