--- a/Serendipity/User Interface/Dock/DockView.xib
+++ b/Serendipity/User Interface/Dock/DockView.xib
@@ -16,8 +16,8 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xgv-Wh-zcG" userLabel="Keep Table">
-                    <rect key="frame" x="-100" y="90" width="240" height="479"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xgv-Wh-zcG" userLabel="Keep Table">
+                    <rect key="frame" x="0.0" y="90" width="140" height="479"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marry" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zfr-SO-1X0">
@@ -26,8 +26,8 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wgR-pc-Jsx" userLabel="Marry Table">
-                    <rect key="frame" x="181" y="89" width="239" height="479"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wgR-pc-Jsx" userLabel="Marry Table">
+                    <rect key="frame" x="181" y="90" width="139" height="479"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F4d-U6-O3S" userLabel="Separator">
@@ -47,9 +47,9 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="F4d-U6-O3S" firstAttribute="leading" secondItem="xgv-Wh-zcG" secondAttribute="trailing" constant="20" id="00r-Ow-9dZ"/>
-                <constraint firstAttribute="trailing" secondItem="wgR-pc-Jsx" secondAttribute="trailing" constant="-100" id="1y7-2n-de3"/>
+                <constraint firstAttribute="trailing" secondItem="wgR-pc-Jsx" secondAttribute="trailing" id="1y7-2n-de3"/>
                 <constraint firstAttribute="centerX" secondItem="F4d-U6-O3S" secondAttribute="centerX" id="7WI-G4-tSV"/>
-                <constraint firstItem="xgv-Wh-zcG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="-100" id="EJq-67-jRm"/>
+                <constraint firstItem="xgv-Wh-zcG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="EJq-67-jRm"/>
                 <constraint firstItem="wgR-pc-Jsx" firstAttribute="leading" secondItem="F4d-U6-O3S" secondAttribute="trailing" constant="20" id="ELC-16-Zqp"/>
                 <constraint firstItem="xgv-Wh-zcG" firstAttribute="top" secondItem="tFy-Dd-FxZ" secondAttribute="bottom" constant="4" id="Jgr-fp-zL9"/>
                 <constraint firstItem="F4d-U6-O3S" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="KR3-W0-2yZ"/>
