--- a/Serendipity/User Interface/Dock/KeepConnectionCell.xib
+++ b/Serendipity/User Interface/Dock/KeepConnectionCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="cAY-2f-1lU" customClass="ConnectionCell" customModule="Serendipity" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="cAY-2f-1lU" customClass="ConnectionCell" customModule="Serendipity" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="240" height="70"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cAY-2f-1lU" id="Ctw-G5-cnb">
