--- a/Serendipity/User Interface/Dock/MarryConnectionCell.xib
+++ b/Serendipity/User Interface/Dock/MarryConnectionCell.xib
@@ -14,30 +14,30 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cAY-2f-1lU" id="Ctw-G5-cnb">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rLr-rA-szy" userLabel="New Indicator">
-                        <rect key="frame" x="50" y="8" width="12" height="12"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rLr-rA-szy" userLabel="New Indicator">
+                        <rect key="frame" x="49" y="8" width="12" height="12"/>
                         <color key="backgroundColor" red="0.95052570104598999" green="0.3660246729850769" blue="0.4469219446182251" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="rLr-rA-szy" secondAttribute="height" multiplier="1:1" id="QfL-tm-ieB"/>
                             <constraint firstAttribute="width" constant="12" id="e3F-Dn-zhr"/>
                         </constraints>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2C2-G4-yXf" userLabel="Avatar">
-                        <rect key="frame" x="8" y="8" width="54" height="54"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2C2-G4-yXf" userLabel="Avatar">
+                        <rect key="frame" x="8" y="8" width="53" height="53"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="2C2-G4-yXf" secondAttribute="height" multiplier="1:1" id="ldG-ki-jnS"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sara" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rM-02-dZt" userLabel="Name">
-                        <rect key="frame" x="70" y="13" width="35" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sara" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rM-02-dZt" userLabel="Name">
+                        <rect key="frame" x="69" y="13" width="35" height="24"/>
                         <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.078431372550000003" green="0.32156862749999998" blue="0.4549019608" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="last message they sent" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpZ-bc-q3K" userLabel="Last Message">
-                        <rect key="frame" x="70" y="37" width="124" height="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="last message they sent" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpZ-bc-q3K" userLabel="Last Message">
+                        <rect key="frame" x="69" y="37" width="124" height="14"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.13725490200000001" green="0.58823529409999997" blue="0.59607843140000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -53,6 +53,7 @@
                     <constraint firstItem="7rM-02-dZt" firstAttribute="leading" secondItem="2C2-G4-yXf" secondAttribute="trailing" constant="8" id="nIe-LR-p7R"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="avatarView" destination="2C2-G4-yXf" id="mOB-uu-j3t"/>
                 <outlet property="nameLabel" destination="7rM-02-dZt" id="bwS-OI-mMN"/>
